[package]
name = "rt-tests-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thread-priority = "1.2.0"
nix = { version="0.29.0", features=["sched", "time", "mman"] }
clap = "4.5.31"
ctrlc = "3.4.5"
thread-id = "5.0.0"